feat: 배포시 파일 읽기 가능하게 긴급수정